@@ -49,5 +49,5 @@ define('ICMS_VERSION_BUILD', 25);
  * So, developers, everytime you add an upgrade block in system/include/update.php to upgrade something in the DB,
  * pease also change this constant
  */
-define('ICMS_SYSTEM_DBVERSION', 23);
+define('ICMS_SYSTEM_DBVERSION', 24);
 ?>
