@@ -10,9 +10,10 @@
 * @version		$Id: update.php 429 2008-003-25 22:21:41Z malanciault $
 */
 
-function xoops_module_update_system(&$module, $oldversion = null, $dbversion = null) {
+function xoops_module_update_system(&$module, $oldversion = null, $dbVersion = null) {
 
 	    global $xoopsDB;
+        $oldversion  = $module->getVar('version');
 	if ($oldversion < 120) {
         $result = $xoopsDB->query("SELECT t1.tpl_id FROM ".$xoopsDB->prefix('tplfile')." t1, ".$xoopsDB->prefix('tplfile')." t2 WHERE t1.tpl_module = t2.tpl_module AND t1.tpl_tplset=t2.tpl_tplset AND t1.tpl_file = t2.tpl_file AND t1.tpl_id > t2.tpl_id");
 
@@ -33,11 +34,12 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
     }
 
     $icmsDatabaseUpdater = XoopsDatabaseFactory::getDatabaseUpdater();
-    //$dbversion  = $module->getDBVersion();
+    //$dbVersion  = $module->getDBVersion();
     //$oldversion  = $module->getVar('version');
     
     ob_start();
 
+    $dbVersion  = $module->getDBVersion();
 	echo "<code>" . _DATABASEUPDATER_UPDATE_UPDATING_DATABASE . "<br />";
 
 	/**
@@ -60,7 +62,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
     $newDbVersion = 1;
 
     $action = sprintf (_CO_ICMS_UPDATE_DBVERSION, icms_conv_nr2local($newDbVersion));
-    if ($dbversion <= $newDbVersion) {
+    if ($dbVersion <= $newDbVersion) {
     	echo $action;
 
 		// Now, first, let's increment the conf_order of user option starting at new_user_notify
@@ -187,7 +189,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
      */
     $newDbVersion = 2;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
     	echo $action;
 		$configitem_handler = xoops_getHandler('configitem');
 		// fetch the rss_local configitem
@@ -210,7 +212,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
      */
     $newDbVersion = 3;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
     	echo $action;
    		$table = new IcmsDatabasetable('users');
 	    if (!$table->fieldExists('openid')) {
@@ -243,7 +245,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 4;
 
-    if($dbversion < $newDbVersion) {
+    if($dbVersion < $newDbVersion) {
     	echo $action;
 
    		$table = new IcmsDatabasetable('users');
@@ -256,7 +258,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 5;
 
-    if($dbversion < $newDbVersion) {
+    if($dbVersion < $newDbVersion) {
     	echo $action;
 		$icmsDatabaseUpdater->insertConfig(XOOPS_CONF_PERSONA, 'use_jsjalali', '_MD_AM_JALALICAL', '0', '_MD_AM_JALALICALDSC', 'yesno', 'int', 23);
 			unset($table);
@@ -264,7 +266,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 	//Some users had used a copy of working branch and they got multiple option, this is to remove all those re-created options and make a single option
     $newDbVersion = 6;
 
-    if($dbversion < $newDbVersion) {
+    if($dbVersion < $newDbVersion) {
     	echo $action;
 	    global $xoopsDB;
         $xoopsDB->queryF("DELETE FROM `" . $xoopsDB->prefix('config') . "` WHERE conf_name='use_jsjalali'");
@@ -274,7 +276,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 7;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
     	echo $action;
 		$configitem_handler = xoops_getHandler('configitem');
 		// fetch the rss_local configitem
@@ -292,7 +294,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
   $newDbVersion = 8;
 
-  if($dbversion < $newDbVersion) {
+  if($dbVersion < $newDbVersion) {
     	echo $action;
 
    		$table = new IcmsDatabasetable('modules');
@@ -305,7 +307,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
   $newDbVersion = 9;
 
-  if($dbversion < $newDbVersion) {
+  if($dbVersion < $newDbVersion) {
     	echo $action;
      $table = new IcmsDatabasetable('users');
       $icmsDatabaseUpdater->runQuery("ALTER TABLE `" .$table->name()."` DROP INDEX unamepass, ADD INDEX unamepass (uname (10), pass (10))",'Successfully altered the index unamepass on table users','');
@@ -314,7 +316,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 	}
 
     $newDbVersion = 10;
-  if($dbversion < $newDbVersion) {
+  if($dbVersion < $newDbVersion) {
     echo "Database migrate to version " . $newDbVersion . "<br />";
 
         $db = $GLOBALS['xoopsDB'];
@@ -363,7 +365,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 11;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
     	echo $action;
 		$icmsDatabaseUpdater->db->queryF("UPDATE `" . $icmsDatabaseUpdater->db->prefix('config') . "` SET conf_formtype = 'textsarea', conf_valuetype = 'array' WHERE conf_name = 'bad_unames'");
 		$icmsDatabaseUpdater->db->queryF("UPDATE `" . $icmsDatabaseUpdater->db->prefix('config') . "` SET conf_formtype = 'textsarea', conf_valuetype = 'array' WHERE conf_name = 'bad_emails'");
@@ -379,7 +381,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 	}
     $newDbVersion = 12;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
     	echo $action;
         $db = $GLOBALS['xoopsDB'];
         if (getDbValue($db, 'configcategory', 'confcat_name', 'confcat_name="_MD_AM_CAPTCHA"') == 0) {
@@ -427,7 +429,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
 	$newDbVersion = 13;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
     	echo $action;
 
         $db->queryF("UPDATE `" . $db->prefix('config') . "` SET conf_formtype = 'textsarea', conf_valuetype = 'array' WHERE conf_name = 'reg_disclaimer'");
@@ -437,7 +439,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
 	$newDbVersion = 14;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
     	echo $action;
 		icms_copyr(ICMS_ROOT_PATH.'/preload', ICMS_ROOT_PATH.'/plugins/preloads');
 		if (is_file(ICMS_ROOT_PATH.'/plugins/preloads')){
@@ -448,7 +450,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 15;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
 	    global $xoopsDB;
     	echo $action;
   		$table = new IcmsDatabasetable('users');
@@ -463,7 +465,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 16;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
     	echo $action;
         $db = $GLOBALS['xoopsDB'];
 		$sql = "SELECT conf_id FROM `".$db->prefix('config')."` WHERE conf_name = 'email_protect'";
@@ -480,7 +482,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 17;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
     	echo $action;
         $db = $GLOBALS['xoopsDB'];
 	    //$icmsDatabaseUpdater->insertConfig(XOOPS_CONF_USER, 'delusers', '_MD_AM_DELUSRES', '90', '_MD_AM_DELUSRESDSC', 'textbox', 'int', 3);
@@ -514,7 +516,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 18;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
 	    global $xoopsDB;
     	echo $action;
   		$table = new IcmsDatabasetable('icmscontent');
@@ -548,7 +550,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
     
     $newDbVersion = 19;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
 	    global $xoopsDB;
     	echo $action;
     	    	$module_handler = xoops_gethandler('module');
@@ -576,7 +578,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 20;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
 	    global $xoopsDB;
     	echo $action;
 	    // Adding configurations of search preferences
@@ -586,7 +588,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 21;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
 	    global $xoopsDB;
     	echo $action;
 	    // create extended date function's config option
@@ -595,7 +597,7 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 22;
 
-    if ($dbversion < $newDbVersion) {
+    if ($dbVersion < $newDbVersion) {
 	    global $xoopsDB;
     	echo $action;
         $xoopsDB->queryF("DELETE FROM `" . $xoopsDB->prefix('modules') . "` WHERE dirname='waiting'");
@@ -605,12 +607,18 @@ function xoops_module_update_system(&$module, $oldversion = null, $dbversion = n
 
     $newDbVersion = 23;
 
-    if($dbversion < $newDbVersion) {
+    if($dbVersion < $newDbVersion) {
     	echo $action;
 	    global $xoopsDB;
         $xoopsDB->queryF("DELETE FROM `" . $xoopsDB->prefix('config') . "` WHERE conf_name='pass_level'");
 		$icmsDatabaseUpdater->insertConfig(XOOPS_CONF_USER, 'pass_level', '_MD_AM_PASSLEVEL', '1', '_MD_AM_PASSLEVEL_DESC', 'yesno', 'int', 2);
-			unset($table);
+    }
+
+    $newDbVersion = 24;
+
+    if($dbVersion < $newDbVersion) {
+    	echo $action;
+	    $icmsDatabaseUpdater->insertConfig(XOOPS_CONF_PERSONA, 'use_custom_redirection', '_MD_AM_CUSTOMRED', '0', '_MD_AM_CUSTOMREDDSC', 'yesno', 'int', 9);
     }
 
 	echo "</code>";
